# JoyconChambara

./: .gitignore  CMakeLists.txt  README.md  main.cpp
JoyShockLibrary/: CMakeLists.txt
JoyconProcessing/: CMakeLists.txt
JoyconProcessing/src/: accel.cpp  accel.h  gyro.cpp  gyro.h
src/: main.cpp
